bk_ida/gccida/c0/regmove_optimize
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1534:4: error: expected ';' after expression
rtx v19; // [rsp+58h] [rbp-2F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1534:5: error: use of undeclared identifier 'v19'
rtx v19; // [rsp+58h] [rbp-2F8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1535:4: error: expected ';' after expression
rtx v20; // [rsp+60h] [rbp-2F0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1535:5: error: use of undeclared identifier 'v20'; did you mean 'v10'?
rtx v20; // [rsp+60h] [rbp-2F0h] 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1525:9: note: 'v10' declared here
__int64 v10; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1537:4: error: expected ';' after expression
rtx next; // [rsp+70h] [rbp-2E0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1537:5: error: use of undeclared identifier 'next'
rtx next; // [rsp+70h] [rbp-2E0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1538:4: error: expected ';' after expression
rtx newa; // [rsp+78h] [rbp-2D8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1538:5: error: use of undeclared identifier 'newa'
rtx newa; // [rsp+78h] [rbp-2D8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1546:4: error: expected ';' after expression
rtx src_note; // [rsp+B8h] [rbp-298h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1546:5: error: use of undeclared identifier 'src_note'
rtx src_note; // [rsp+B8h] [rbp-298h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1547:4: error: expected ';' after expression
rtx dst_0; // [rsp+C0h] [rbp-290h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1547:5: error: use of undeclared identifier 'dst_0'
rtx dst_0; // [rsp+C0h] [rbp-290h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1548:4: error: expected ';' after expression
rtx src_0; // [rsp+C8h] [rbp-288h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1548:5: error: use of undeclared identifier 'src_0'
rtx src_0; // [rsp+C8h] [rbp-288h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1549:4: error: expected ';' after expression
rtx p; // [rsp+D0h] [rbp-280h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1549:5: error: use of undeclared identifier 'p'
rtx p; // [rsp+D0h] [rbp-280h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1557:4: error: expected ';' after expression
rtx dst; // [rsp+108h] [rbp-248h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1557:5: error: use of undeclared identifier 'dst'
rtx dst; // [rsp+108h] [rbp-248h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/regmove.c:1558:4: error: expected ';' after expression
rtx src; // [rsp+110h] [rbp-240h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/regmove_optimize/src/obj/regmove.o] Error 1
